--- a/src/Arii/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Arii/CoreBundle/Resources/views/layout.html.twig
@@ -10,7 +10,7 @@
 <script language="javascript">
 var size=180;
 dhtmlxEvent(window,"load",function(){   
-    AriiLayout('Core','',size);
+    AriiLayout('Core','help',size);
 
     mySidebar = globalLayout.cells("a").attachSidebar({
         template: "tiles",
