--- a/src/Arii/JIDBundle/Resources/views/Default/index.html.twig
+++ b/src/Arii/JIDBundle/Resources/views/Default/index.html.twig
@@ -1,7 +1,10 @@
-{% extends "AriiJIDBundle::layout.html.twig" %}
+{# src/Arii/JIDBundle/Resources/views/Default/history.html.twig #}
+{% extends "AriiTimeBundle::layout.html.twig" %}
 {% block body %}
+<body>
 <script language="javascript">
 function Init() {
+
     myLayout = globalLayout.cells("b").attachLayout("1C");
     myLayout.cells("a").hideHeader();
 
