--- a/src/Arii/TimeBundle/Resources/views/Calendars/index.html.twig
+++ b/src/Arii/TimeBundle/Resources/views/Calendars/index.html.twig
@@ -49,23 +49,9 @@
 }
 </style>
 <script charset="utf-8">
-dhtmlxEvent(window,"load",function(){
-        
-    globalLayout = new dhtmlXLayoutObject(document.body,"3L");  
-    globalLayout.cells("a").setWidth(350); 
-    globalLayout.cells("a").hideHeader(); 
-    globalLayout.cells("b").hideHeader(); 
-    globalLayout.cells("c").hideHeader(); 
+function Init() {
 
-    globalMenu = globalLayout.cells("a").attachMenu();
-    globalMenu.setIconsPath( "{{ asset('/images/') }}" );
-    globalMenu.loadStruct("{{ url('xml_menu') }}?route={{ app.request.attributes.get('_route') }}");
-
-    myRibbon = globalLayout.cells("a").attachRibbon(); 
-    myRibbon.setIconPath( "{{ asset('/images/') }}" );
-    myRibbon.loadStruct("{{ url('json_Time_ribbon') }}");
-    myRibbon.attachEvent("onStateChange", StateRibbon );
-    myRibbon.attachEvent("onClick", ClickRibbon );    
+    myLayout = globalLayout.cells("b").attachLayout("1C");
     
     dhxGrid = globalLayout.cells("a").attachGrid();
     dhxGrid.setImagePath( "{{ asset('/images/') }}");
@@ -189,8 +175,7 @@ dhtmlxEvent(window,"load",function(){
                 break;
         }
     });
-
-});
+}
 
 function Detail(id) {
     globalLayout.cells("b").progressOn();
