--- a/src/Arii/TimeBundle/Resources/views/layout.html.twig
+++ b/src/Arii/TimeBundle/Resources/views/layout.html.twig
@@ -1,51 +1,55 @@
 {% extends "AriiCoreBundle::base.html.twig" %}
 {% block dhtmlx %}
-<script 
-    type="text/javascript" 
-    src="http://maps.google.com/maps/api/js?key=AIzaSyDca2to4K3eB794iFtdfZDY44AEtnuAZzU"></script> 
-    <link rel="stylesheet" type="text/css" href="{{ asset('dhtmlx/skins/terrace/dhtmlx.css') }}" />
-    <script src="{{ asset('dhtmlx/codebase/dhtmlx.js') }}" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="{{ asset('dhtmlx_scheduler/codebase/dhtmlxscheduler.css') }}" />
-    <script src="{{ asset('dhtmlx_scheduler/codebase/dhtmlxscheduler.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('dhtmlx_scheduler/codebase/ext/dhtmlxscheduler_year_view.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('dhtmlx_scheduler/codebase/ext/dhtmlxscheduler_agenda_view.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('dhtmlx_scheduler/codebase/locale') }}/locale_{{ app.request.locale }}.js" type="text/javascript"></script>        
+<link rel="stylesheet" type="text/css" href="{{ asset('dhtmlx_scheduler/codebase/dhtmlxscheduler.css') }}" />
+<link rel="stylesheet" type="text/css" href="{{ asset('dhtmlx/skins/terrace/dhtmlx.css') }}" />
+<script src="{{ asset('dhtmlx/codebase/dhtmlx.js') }}" type="text/javascript"></script>
+<script src="{{ asset('dhtmlx_scheduler/codebase/dhtmlxscheduler.js') }}" type="text/javascript"></script>
 {% endblock dhtmlx %}
 {% block dhtmlx_plus %}
+{% include "AriiCoreBundle:Common:ribbon.js.twig" %}    
 {% endblock dhtmlx_plus %}
-{% block body %}
-{% endblock body %}
-{% block script %}
-<script>
-function StateRibbon (itemid,state) {
-    switch(itemid) {
-        default:
-            alert(itemid);
-    }
-}
+{% block onload %}
+<script language="javascript">
+var size = 200;
+dhtmlxEvent(window,"load",function(){
+    AriiLayout('Time','help',size);
+    
+    menuLayout = globalLayout.cells("a").attachLayout("2E");
+    menuLayout.cells("a").setText("{{ "Menu" | trans }}");
+    menuLayout.cells("b").setHeight(size);
+    menuLayout.cells("b").hideHeader();
+    
+    mySidebar = menuLayout.cells("a").attachSidebar({
+        icons_path: "{{ asset('/images/') }}",
+        // template: "tiles",
+        width: size,
+        items:
+        [
+            { id:"calendars",  text: "{{ "Calendars" | trans }}",  icon: "calendars.png" },
+            { id:"holidays",   text: "{{ "Holidays" | trans }}",   icon: "holidays.png" },
+            { id:"rules",      text: "{{ "Rules" | trans }}",      icon: "rules.png" },
+//            { id:"sep5",      type: "separator" },
+            { id:"zones",      text: "{{ "Zones" | trans }}",      icon: "zones.png" },
+            { id:"references", text: "{{ "References" | trans }}", icon: "days_ref.png" }
+        ]
+    });
+    mySidebar.attachEvent("onBubbleClick", function(id, value){
+        // bubble clicked, your code here
+        // 'return true' means item allowed to be selected
+        // false - otherwise
+        return true;
+    });    
 
-function ClickRibbon (itemid,state) {
-    switch(itemid) {
-    case 'menu_zones':
-        window.location = "{{ url('arii_Time_zones') }}";
-        break;
-    case 'menu_calendars':
-        window.location = "{{ url('arii_Time_calendars') }}";
-        break;
-    case 'menu_holidays':
-        window.location = "{{ url('arii_Time_holidays') }}";
-        break;
-    case 'menu_rules':
-        window.location = "{{ url('arii_Time_rules') }}";
-        break;
-    case 'menu_references':
-        window.location = "{{ url('arii_Time_references') }}";
-        break;
-    default:
-        alert(itemid);
-    }
-}
+    mySidebar.attachEvent("onSelect", function(id, value){
+        document.location.href = "{{ url('arii_Time_index') }}"+id;
+        return true;
+    });
+
+    Init();
+});
 </script>
-{% endblock script %}
-
-            
+{% endblock onload %}
+{% block body %}{% endblock%}
+{% block script %}
+{% include "AriiCoreBundle:Common:ribbon.js.twig" %}
+{% endblock script %}    
