--- a/src/Arii/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Arii/AdminBundle/Resources/views/layout.html.twig
@@ -25,6 +25,7 @@ dhtmlxEvent(window,"load",function(){
             { id:"domains", text: "{{ "Domains" | trans }}", icon: "domain.png" },
             { id:"rules", text: "{{ "Rules" | trans }}", icon: "rule.png" },
             { id:"sep1", type: "separator" },
+            { id:"repos", text: "{{ "Repositories" | trans }}", icon: "database.png" },
             { id:"connections", text: "{{ "Connections" | trans }}", icon: "connect.png" },
             { id:"nodes", text: "{{ "Nodes" | trans }}", icon: "agent.png" },    
             { id:"sep2", type: "separator" },
