--- a/src/Arii/JIDBundle/Resources/views/Inventory/Instances/index.html.twig
+++ b/src/Arii/JIDBundle/Resources/views/Inventory/Instances/index.html.twig
@@ -2,6 +2,7 @@
 {% block body %}
 <script language="javascript">
 function Init() {
+    myAccordion.cells( "inventory" ).open(false); 
 
     myInstancesLayout = globalLayout.cells("b").attachLayout('2E');
     myInstancesLayout.cells('a').setText("{{ "Instances" | trans }}");
